Correct alignment of text in categories.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -234,6 +234,14 @@ nav ul a {
     padding-top: 4%;
     padding-bottom: 4%;
 }
+
+.description-cat {
+    font-size: xx-large;
+    font-weight: bolder;
+    color: #e63253;
+    text-align: center;
+}
+
 /* recipes.html */
 
 .link {
